--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -2,6 +2,8 @@
 
 Presentation of the MED environment ... 
 
+give values for coherence lengths
+
 \subsection{Tailored for the study of materials}
 
 \subsection{The SixS beamline}
