--- a/references.bib
+++ b/references.bib
@@ -29,7 +29,6 @@ year = {2002}
    year = {1997},
 }
 
-
 @article{Drnec2014,
    abstract = {This article proposes two integration methods to determine the structure factors along a surface diffraction rod measured with a two-dimensional detector. The first method applies the classic way of calculating integrated intensities in angular space. This is adapted to work efficiently with two-dimensional data. The second method is based on integration in reciprocal space. An intensity map is created by converting the detected intensity pixel by pixel to the reciprocal space. The integration is then performed directly on this map. A theoretical framework, as well as a comparison between the two integration methods, is provided.},
    author = {Jakub Drnec and Tao Zhou and Stelian Pintea and Willem Onderwaater and Elias Vlieg},
@@ -41,8 +40,6 @@ year = {2002}
    volume = {47},
    year = {2014},
 }
-
-
 
 @article{Schleputz2011,
 author = "Schlep{\"{u}}tz, Christian M. and Mariager, Simon O. and Pauli, Stephan A. and Feidenhans'l, Robert and Willmott, Philip R.",
@@ -1296,6 +1293,73 @@ title = {{Experimental setup combining in situ hard X-ray photoelectron spectros
 volume = {90},
 year = {2019}
 }
+
+@generic{Harlow2020,
+   abstract = {Determining how electrode structure governs the performance of an electrocatalyst requires techniques capable of probing structure at the atomic scale, often in situ and operando. In recent years, there have been numerous advances in the main experimental techniques for determining the structure of the electrochemical interface. In situ/operando synchrotron surface x-ray diffraction measurements are key to investigate the atomic structure of the electrode surfaces as well as understand the structure-reactivity relations in electrocatalysis. Here we discuss some recent improvements that have taken place in surface x-ray diffraction and how we expect them to lead to an enhanced understanding of electrocatalysis.},
+   author = {Gary S. Harlow and Edvin Lundgren and María Escudero-Escribano},
+   doi = {10.1016/j.coelec.2020.08.005},
+   issn = {24519111},
+   journal = {Current Opinion in Electrochemistry},
+   keywords = {Crystal truncation rods,Electrocatalysis,Electrode structure,Single crystals,Surface x-ray diffraction},
+   month = {10},
+   pages = {162-173},
+   publisher = {Elsevier B.V.},
+   title = {Recent advances in surface x-ray diffraction and the potential for determining structure-sensitivity relations in single-crystal electrocatalysis},
+   volume = {23},
+   year = {2020},
+}
+
+
+@article{Schlepütz2005,
+   abstract = {The use of an area detector in grazing-incidence X-ray experiments lends many advantages in terms of both speed and reliability. Here a discussion is given of the procedures established using the PILATUS pixel detector developed at the Swiss Light Source for optimizing data acquisition and analysis of surface diffraction data at the Materials Science beamline, especially with regard to reflectivity measurements, crystal truncation and fractional order rods, and grazing-incidence diffraction experiments. © 2005 International Union of Crystallography - all rights reserved.},
+   author = {C. M. Schlepütz and R. Herger and P. R. Willmott and B. D. Patterson and O. Bunk and Ch Brönnimann and B. Henrich and G. Hülsen and E. F. Eikenberry},
+   doi = {10.1107/S0108767305014790},
+   issn = {01087673},
+   issue = {4},
+   journal = {Acta Crystallographica Section A: Foundations of Crystallography},
+   pages = {418-425},
+   pmid = {15972995},
+   title = {Improved data acquisition in grazing-incidence X-ray scattering experiments using a pixel detector},
+   volume = {61},
+   year = {2005},
+}
+
+
+
+@article{Gustafson2014,
+   abstract = {Understanding the interaction between surfaces and their surroundings is crucial in many materials-science fields, such as catalysis, corrosion, and thin-film electronics, but existing characterization methods have not been capable of fully determining the structure of surfaces during dynamic processes, such as catalytic reactions, in a reasonable time frame. We demonstrate an x-ray-diffraction-based characterization method that uses high-energy photons (85 kiloelectron volts) to provide unexpected gains in data acquisition speed by several orders of magnitude and enables structural determinations of surfaces on time scales suitable for in situ studies. We illustrate the potential of high-energy surface x-ray diffraction by determining the structure of a palladium surface in situ during catalytic carbon monoxide oxidation and follow dynamic restructuring of the surface with subsecond time resolution.},
+   author = {J. Gustafson and M. Shipilin and C. Zhang and A. Stierle and U. Hejral and U. Ruett and O. Gutowski and P. A. Carlsson and M. Skoglundh and E. Lundgren},
+   doi = {10.1126/science.1246834},
+   issn = {10959203},
+   issue = {6172},
+   journal = {Science},
+   pages = {758-761},
+   publisher = {American Association for the Advancement of Science},
+   title = {High-energy surface x-ray diffraction for fast surface structure determination},
+   volume = {343},
+   year = {2014},
+}
+
+
+@generic{Hejral2021,
+   abstract = {Catalysts are materials that accelerate the rate of a desired chemical reaction. As such, they constitute an integral part in many applications ranging from the production of fine chemicals in chemical industry to exhaust gas treatment in vehicles. Accordingly, it is of utmost economic interest to improve catalyst efficiency and performance, which requires an understanding of the interplay between the catalyst structure, the gas phase and the catalytic activity under realistic reaction conditions at ambient pressures and elevated temperatures. In recent years efforts have been made to increasingly develop techniques that allow for investigating model catalyst samples under conditions closer to those of real technical catalysts. One of these techniques is high energy surface x-ray diffraction (HESXRD), which uses x-rays with photon energies typically in the range of 70-80 keV. HESXRD allows a fast data collection of three dimensional reciprocal space for the structure determination of model catalyst samples under operando conditions and has since been used for the investigation of an increasing number of different model catalysts. In this article we will review general considerations of HESXRD including its working principle for different model catalyst samples and the experimental equipment required. An overview over HESXRD investigations performed in recent years will be given, and the advantages of HESXRD with respect to its application to different model catalyst samples will be presented. Moreover, the combination of HESXRD with other operando techniques such as in situ mass spectrometry, planar laser-induced fluorescence and surface optical reflectance will be discussed. The article will close with an outlook on future perspectives and applications of HESXRD.},
+   author = {Uta Hejral and Mikhail Shipilin and Johan Gustafson and Andreas Stierle and Edvin Lundgren},
+   doi = {10.1088/1361-648X/abb17c},
+   issn = {1361648X},
+   issue = {7},
+   journal = {Journal of Physics Condensed Matter},
+   keywords = {High energy surface x-ray diffraction,Laser-induced fluorescence,Model catalysts,Nanoparticles,Operando catalysis,Surface optical reflectance,Vicinal surfaces},
+   month = {2},
+   pmid = {33690191},
+   publisher = {IOP Publishing Ltd},
+   title = {High energy surface x-ray diffraction applied to model catalyst surfaces at work},
+   volume = {33},
+   year = {2021},
+}
+
+
+
+
 @article{Roobol2015,
 abstract = {BINoculars is a tool for data reduction and analysis of large sets of surface diffraction data that have been acquired with a two-dimensional X-ray detector. The intensity of each pixel of a two-dimensional detector is projected onto a three-dimensional grid in reciprocal-lattice coordinates using a binning algorithm. This allows for fast acquisition and processing of high-resolution data sets and results in a significant reduction of the size of the data set. The subsequent analysis then proceeds in reciprocal space. It has evolved from the specific needs of the ID03 beamline at the ESRF, but it has a modular design and can be easily adjusted and extended to work with data from other beamlines or from other measurement techniques. This paper covers the design and the underlying methods employed in this software package and explains how BINoculars can be used to improve the workflow of surface X-ray diffraction measurements and analysis.},
 author = {Roobol, Sander and Onderwaater, Willem and Drnec, Jakub and Felici, Roberto and Frenken, Joost},
@@ -2064,20 +2128,8 @@ author = {Yau, Allison},
 file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Yau - Unknown - Introduction to Bragg Coherent Diffractive Imaging.pdf:pdf},
 title = {{Introduction to Bragg Coherent Diffractive Imaging}}
 }
-@article{Hu2018,
-abstract = {This article reports a theoretical study on the reconstruction artefacts in Bragg coherent diffractive imaging caused by dynamical diffraction effects. It is shown that, unlike the absorption and refraction effects that can be corrected after reconstruction, dynamical diffraction effects have profound impacts on both the amplitude and the phase of the reconstructed complex object, causing strong artefacts. At the dynamical diffraction limit, the reconstructed shape is no longer correct, as a result of the strong extinction effect. Simulations for hemispherical particles of different sizes show the type, magnitude and extent of the dynamical diffraction artefacts, as well as the conditions under which they are negligible.The article presents a theoretical study on dynamic artefacts in the reconstruction of Bragg coherent diffractive imaging using an iterative phase retrieval algorithm.},
-author = {Hu, Wen and Huang, Xiaojing and Yan, Hanfei},
-doi = {10.1107/S1600576718000274},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Hu, Huang, Yan - 2018 - Dynamic diffraction artefacts in Bragg coherent diffractive imaging.pdf:pdf},
-issn = {16005767},
-journal = {Journal of Applied Crystallography},
-keywords = {Bragg coherent diffractive imaging,dynamic diffraction,iterative phase reconstruction},
-number = {1},
-pages = {167--174},
-title = {{Dynamic diffraction artefacts in Bragg coherent diffractive imaging:}},
-volume = {51},
-year = {2018}
-}
+
+
 @article{Croset2017,
 abstract = {A general and compact formula is established for the form factor of any polyhedron, which involves only the apex coordinates and the apex connections. For large diffusion vector q, the form factor behaves like q-3 for generic directions, but it exhibits q-2 singularities in the directions perpendicular to the edges and q-1 singularities in the directions normal to the faces. General results are established for these singularities. Using a Python implementation, illustrative examples are discussed. The generality of the formula and of its singularities are likely to be important for any discussion of scattering from polyhedral particles.A compact and general formula for the form factor of any polyhedron is given and its singularities are discussed, together with illustrative examples.},
 author = {Croset, Bernard},
@@ -2684,6 +2736,94 @@ title = {{Towards a quantitative determination of strain in Bragg Coherent X-ray
 volume = {9},
 year = {2019}
 }
+
+@article{Harder2007,
+   abstract = {Expansion of the surface layers of a facetted hemispherical nanocrystal of Pb is reported at a temperature just below the melting point. Inversion of the coherent x-ray diffraction pattern yields quantitative three-dimensional maps of the deformation of the crystal from its equilibrium lattice spacing. Most of the surface of the crystal has a clear outward displacement, which decays exponentially into the bulk. This is suppressed on the (111) facet itself and is stronger on the spherical regions, suggesting that it arises from the orientational variation of the underlying surface stress.},
+   author = {R. Harder and M. A. Pfeifer and G. J. Williams and I. A. Vartaniants and I. K. Robinson},
+   doi = {10.1103/physrevb.76.115425},
+   issn = {1098-0121},
+   issue = {11},
+   journal = {Physical Review B},
+   month = {9},
+   publisher = {American Physical Society (APS)},
+   title = {Orientation variation of surface strain},
+   volume = {76},
+   year = {2007},
+}
+
+@article{Pfeifer2006,
+   abstract = {Coherent X-ray diffraction imaging is a rapidly advancing form of microscopy: diffraction patterns, measured using the latest third-generation synchrotron radiation sources, can be inverted to obtain full three-dimensional images of the interior density within nanocrystals. Diffraction from an ideal crystal lattice results in an identical copy of this continuous diffraction pattern at every Bragg peak. This symmetry is broken by the presence of strain fields, which arise from the epitaxial contact forces that are inevitable whenever nanocrystals are prepared on a substrate. When strain is present, the diffraction copies at different Bragg peaks are no longer identical and contain additional information, appearing as broken local inversion symmetry about each Bragg point. Here we show that one such pattern can nevertheless be inverted to obtain a 'complex' crystal density, whose phase encodes a projection of the lattice deformation. A lead nanocrystal was crystallized in ultrahigh vacuum from a droplet on a silica substrate and equilibrated close to its melting point. A three-dimensional image of the density, obtained by inversion of the coherent X-ray diffraction, shows the expected facetted morphology, but in addition reveals a real-space phase that is consistent with the three-dimensional evolution of a deformation field arising from interfacial contact forces. Quantitative three-dimensional imaging of lattice strain on the nanometre scale will have profound consequences for our fundamental understanding of grain interactions and defects in crystalline materials. Our method of measuring and inverting diffraction patterns from nanocrystals represents a vital step towards the ultimate goal of atomic resolution single-molecule imaging that is a prominent justification for development of X-ray free-electron lasers. © 2006 Nature Publishing Group.},
+   author = {Mark A. Pfeifer and Garth J. Williams and Ivan A. Vartanyants and Ross Harder and Ian K. Robinson},
+   doi = {10.1038/nature04867},
+   issn = {14764687},
+   issue = {7098},
+   journal = {Nature},
+   pages = {63-66},
+   title = {Three-dimensional mapping of a deformation field inside a nanocrystal},
+   volume = {442},
+   year = {2006},
+}
+
+
+@article{Minkevich2007,
+   abstract = {The displacement field in highly nonuniformly strained crystals is obtained by addition of constraints to an iterative phase retrieval algorithm. These constraints include direct space density uniformity and also constraints to the sign and derivatives of the different components of the displacement field. This algorithm is applied to an experimental reciprocal space map measured using high-resolution x-ray diffraction from an array of silicon lines, and the obtained component of the displacement field is in very good agreement with the one calculated using a finite element model. © 2007 The American Physical Society.},
+   author = {A. A. Minkevich and M. Gailhanou and J. S. Micha and B. Charlet and V. Chamard and O. Thomas},
+   doi = {10.1103/PhysRevB.76.104106},
+   issn = {10980121},
+   issue = {10},
+   journal = {Physical Review B - Condensed Matter and Materials Physics},
+   month = {9},
+   title = {Inversion of the diffraction pattern from an inhomogeneously strained crystal using an iterative algorithm},
+   volume = {76},
+   year = {2007},
+}
+
+
+@article{Yan2014,
+   abstract = {The effects of dynamical diffraction in single crystals engender many unique diffraction phenomena that cannot be interpreted by the kinematical-diffraction theory, yet knowledge of them is vital to resolving a vast variety of scientific problems ranging from crystal optics to strain measurements in crystalline specimens. Although the fundamental dynamical-diffraction theory was established decades ago, modeling it remains a challenge in a general case wherein the crystal has complex boundaries and mixed diffraction geometries (Bragg or Laue). Here, we propose a universal approach for modeling x-ray dynamical diffraction from a single crystal with arbitrary shape and strain field that is based on the integral representation of the Takagi-Taupin equations. Using it, we can construct the solution iteratively via a converging series, independent of the diffraction geometry. Moreover, the integral equations offer additional insights into the diffraction physics that are not readily apparent in its differential counterparts. To demonstrate this approach, we studied the dynamical diffraction from a slab of single crystal with both Bragg and Laue diffraction excited on the entrance boundaries, a problem that is difficult to model by other methods. We also explored the mirage effect caused by the presence of a linear strain field and compared it to the Eikonal theory. Lastly, we derived a dynamical-diffraction equation correlating the structural properties of a particle to its far-field Bragg-diffraction pattern, shedding light on how dynamical diffraction affects these kinematical-diffraction-based inverse techniques for reconstructing the shape and the strain field. © 2014 American Physical Society.},
+   author = {Hanfei Yan and Li Li},
+   doi = {10.1103/PhysRevB.89.014104},
+   issn = {10980121},
+   issue = {1},
+   journal = {Physical Review B - Condensed Matter and Materials Physics},
+   month = {1},
+   title = {X-ray dynamical diffraction from single crystals with arbitrary shape and strain field: A universal approach to modeling},
+   volume = {89},
+   year = {2014},
+}
+
+
+@Article{Barringer2021,
+author ="Barringer, Zachary and Jiang, Jie and Shi, Xiaowen and Schold, Elijah and Pateras, Anastasios and Cipiccia, S. and Rau, C. and Shi, Jian and Fohtung, Edwin",
+title  ="Imaging defects in vanadium(iii) oxide nanocrystals using Bragg coherent diffractive imaging",
+journal  ="CrystEngComm",
+year  ="2021",
+volume  ="23",
+issue  ="36",
+pages  ="6239-6244",
+publisher  ="The Royal Society of Chemistry",
+doi  ="10.1039/D1CE00736J",
+url  ="http://dx.doi.org/10.1039/D1CE00736J",
+abstract  ="Defects in strongly correlated materials such as V2O3 play influential roles on their electrical properties. Understanding the defects{'} structure is of paramount importance. In this project{,} we investigate defect structures in V2O3 grown via a flux method. We use AFM to see surface features in several large flake-like particles that exhibit characteristics of spiral growth. We also use Bragg coherent diffractive imaging (BCDI) to probe in 3 dimensions a smaller particle without flake-like morphology and note an absence of the pure screw dislocation characteristic of spiral growth. We identified and measured several defects by comparing the observed local displacement of the crystal{,} measured via BCDI to well-known models of the displacement around defects in the crystal. We identified two partial dislocations in the crystal. We discuss how defects of different types influence the morphology of V2O3 crystals grown via a flux method."
+}
+
+
+@article{Hu2018,
+   abstract = {This article reports a theoretical study on the reconstruction artefacts in Bragg coherent diffractive imaging caused by dynamical diffraction effects. It is shown that, unlike the absorption and refraction effects that can be corrected after reconstruction, dynamical diffraction effects have profound impacts on both the amplitude and the phase of the reconstructed complex object, causing strong artefacts. At the dynamical diffraction limit, the reconstructed shape is no longer correct, as a result of the strong extinction effect. Simulations for hemispherical particles of different sizes show the type, magnitude and extent of the dynamical diffraction artefacts, as well as the conditions under which they are negligible.The article presents a theoretical study on dynamic artefacts in the reconstruction of Bragg coherent diffractive imaging using an iterative phase retrieval algorithm.},
+   author = {Wen Hu and Xiaojing Huang and Hanfei Yan},
+   doi = {10.1107/S1600576718000274},
+   issn = {16005767},
+   issue = {1},
+   journal = {Journal of Applied Crystallography},
+   keywords = {Bragg coherent diffractive imaging,dynamic diffraction,iterative phase reconstruction},
+   month = {2},
+   pages = {167-174},
+   publisher = {Wiley-Blackwell},
+   title = {Dynamic diffraction artefacts in Bragg coherent diffractive imaging},
+   volume = {51},
+   year = {2018},
+}
+
 @article{Karpov2019,
 abstract = {Strain engineering is a promising technology with potential application in memory devices, electronic elements, photoactive materials, etc. Nanoscale imaging of the strain is therefore important to better understand the operating condition of the device, growth processes, and influences of other factors. X-rays offer the advantage over electron-based techniques in that they offer high spatial resolution and access to volumetric information within nanostructured materials. This paper describes the basic physics behind strain at the nanoscale and provides a concise summary of the efforts in coherent diffractive imaging for the imaging of the displacement fields in nanocrystals. Although the approach is still under development, with instruments being continuously improved, a number of important results have already been demonstrated.},
 annote = {Nice review},
@@ -2715,19 +2855,6 @@ volume = {4},
 year = {2020}
 }
 
-@article{Pfeifer2006,
-abstract = {Coherent X-ray diffraction imaging is a rapidly advancing form of microscopy: diffraction patterns, measured using the latest third-generation synchrotron radiation sources, can be inverted to obtain full three-dimensional images of the interior density within nanocrystals. Diffraction from an ideal crystal lattice results in an identical copy of this continuous diffraction pattern at every Bragg peak. This symmetry is broken by the presence of strain fields, which arise from the epitaxial contact forces that are inevitable whenever nanocrystals are prepared on a substrate. When strain is present, the diffraction copies at different Bragg peaks are no longer identical and contain additional information, appearing as broken local inversion symmetry about each Bragg point. Here we show that one such pattern can nevertheless be inverted to obtain a 'complex' crystal density, whose phase encodes a projection of the lattice deformation. A lead nanocrystal was crystallized in ultrahigh vacuum from a droplet on a silica substrate and equilibrated close to its melting point. A three-dimensional image of the density, obtained by inversion of the coherent X-ray diffraction, shows the expected facetted morphology, but in addition reveals a real-space phase that is consistent with the three-dimensional evolution of a deformation field arising from interfacial contact forces. Quantitative three-dimensional imaging of lattice strain on the nanometre scale will have profound consequences for our fundamental understanding of grain interactions and defects in crystalline materials. Our method of measuring and inverting diffraction patterns from nanocrystals represents a vital step towards the ultimate goal of atomic resolution single-molecule imaging that is a prominent justification for development of X-ray free-electron lasers. {\textcopyright} 2006 Nature Publishing Group.},
-author = {Pfeifer, Mark A. and Williams, Garth J. and Vartanyants, Ivan A. and Harder, Ross and Robinson, Ian K.},
-doi = {10.1038/nature04867},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Pfeifer et al. - 2006 - Three-dimensional mapping of a deformation field inside a nanocrystal.pdf:pdf},
-issn = {14764687},
-journal = {Nature},
-number = {7098},
-pages = {63--66},
-title = {{Three-dimensional mapping of a deformation field inside a nanocrystal}},
-volume = {442},
-year = {2006}
-}
 @article{Cherukara2018,
 abstract = {Phase retrieval, or the process of recovering phase information in reciprocal space to reconstruct images from measured intensity alone, is the underlying basis to a variety of imaging applications including coherent diffraction imaging (CDI). Typical phase retrieval algorithms are iterative in nature, and hence, are time-consuming and computationally expensive, making real-time imaging a challenge. Furthermore, iterative phase retrieval algorithms struggle to converge to the correct solution especially in the presence of strong phase structures. In this work, we demonstrate the training and testing of CDI NN, a pair of deep deconvolutional networks trained to predict structure and phase in real space of a 2D object from its corresponding far-field diffraction intensities alone. Once trained, CDI NN can invert a diffraction pattern to an image within a few milliseconds of compute time on a standard desktop machine, opening the door to real-time imaging.},
 author = {Cherukara, Mathew J. and Nashed, Youssef S.G. and Harder, Ross J.},
@@ -2742,6 +2869,20 @@ title = {{Real-time coherent diffraction inversion using deep generative network
 volume = {8},
 year = {2018}
 }
+
+@article{Gao2022,
+   author = {Yuan Gao and Xiaojing Huang and Ross Harder and Wonsuk Cha and Garth J. Williams and Hanfei Yan},
+   doi = {10.1103/PhysRevB.106.184111},
+   issn = {2469-9950},
+   issue = {18},
+   journal = {Physical Review B},
+   month = {11},
+   pages = {184111},
+   title = {Modeling and experimental validation of dynamical effects in Bragg coherent x-ray diffractive imaging of finite crystals},
+   volume = {106},
+   year = {2022},
+}
+
 @article{Wang2016,
 abstract = {We report a method for using battery electrode materials to directly and continuously control the lattice strain of platinum (Pt) catalyst and thus tune its catalytic activity for the oxygen reduction reaction (ORR). Whereas the common approach of using metal overlayers introduces ligand effects in addition to strain, by electrochemically switching between the charging and discharging status of battery electrodes the change in volume can be precisely controlled to induce either compressive or tensile strain on supported catalysts. Lattice compression and tension induced by the lithium cobalt oxide substrate of ∼5% were directly observed in individual Pt nanoparticles with aberration-corrected transmission electron microscopy. We observed 90% enhancement or 40% suppression in Pt ORR activity under compression or tension, respectively, which is consistent with theoretical predictions.},
 annote = {Wang, H., Xu, S., Tsai, C., Li, Y., Liu, C., Zhao, J., Liu, Y., Yuan, H., Abild-Pedersen, F., Prinz, F. B., N{\o}rskov, J. K., & Cui, Y. (2016). Direct and continuous strain control of catalysts with tunable battery electrode materials. Science, 354(6315), 1031–1036. https://doi.org/10.1126/science.aaf7680},
@@ -3260,6 +3401,39 @@ Year = {2016}}
    pages = {331--369},
    file = {ScienceDirect Snapshot:/Users/marieingridrichard/Zotero/storage/W56QC5RQ/B9780444530998000105.html:text/html}
 }
+
+
+@article{Bjorck2007,
+author = "Bj{\"{o}}rck, Matts and Andersson, Gabriella",
+title = "{{\it GenX}: an extensible X-ray reflectivity refinement program utilizing differential evolution}",
+journal = "Journal of Applied Crystallography",
+year = "2007",
+volume = "40",
+number = "6",
+pages = "1174--1178",
+month = "Dec",
+doi = {10.1107/S0021889807045086},
+url = {https://doi.org/10.1107/S0021889807045086},
+abstract = {{\it GenX} is a versatile program using the differential evolution algorithm for fitting X-ray and neutron reflectivity data. It utilizes the Parratt recursion formula for simulating specular reflectivity. The program is easily extensible, allowing users to incorporate their own models into the program. This can be useful for fitting data from other scattering experiments, or for any other minimization problem which has a large number of input parameters and/or contains many local minima, where the differential evolution algorithm is suitable. In addition, {\it GenX} manages to fit an arbitrary number of data sets simultaneously. The program is released under the GNU General Public License.},
+keywords = {X-ray reflectivity, neutron reflectivity, differential evolution algorithm, genetic algorithm},
+}
+
+
+@article{Glavic2022,
+author = "Glavic, Artur and Bj{\"{o}}rck, Matts",
+title = "{{\it GenX 3}: the latest generation of an established tool}",
+journal = "Journal of Applied Crystallography",
+year = "2022",
+volume = "55",
+number = "4",
+pages = "1063--1071",
+month = "Aug",
+doi = {10.1107/S1600576722006653},
+url = {https://doi.org/10.1107/S1600576722006653},
+abstract = {Since its publication more than 15 years ago the {\it GenX} software has been continuously developed and has established itself as a standard package for analyzing X-ray and neutron reflectometry data. The evolution of the software during the last two major revisions is reported here. This includes a simplified model builder for beginners, simple samples, additional sample models, statistical error analysis and the use of just-in-time compilation modules for the reflectometry kernel to achieve higher performance. In addition, the influence of experimental errors on the reflectivity curve is discussed, and new features are described that allow the user to include these in the error statistics to improve the fitting and uncertainty estimation.},
+keywords = {reflectometry, surface X-ray diffraction, neutron analysis, X-ray analysis},
+}
+
 
 @article{etzelstorfer_fast_2013,
    title = {Fast scanning x-ray strain microscopy of inhomogeneously strained {Ge} micro-bridges},
@@ -4100,18 +4274,25 @@ Palladium–silicon (Pd–Si) is a model system for investigating stress develop
    file = {Snapshot:/Users/marieingridrichard/Zotero/storage/7VLY5DGF/abstract.html:text/html}
 }
 
-@article{takagi_dynamical_1969,
-   title = {A {Dynamical} {Theory} of {Diffraction} for a {Distorted} {Crystal}},
+@article{Takagi1969,
+   author = {Takagi Satio},
+   issue = {5},
+   journal = {Journal of the Physical Societey of Japan},
+   pages = {1239},
+   title = {A dynamical theory of diffraction for a Distorted Crystal},
    volume = {26},
-   doi = {10.1143/JPSJ.26.1239},
-   abstract = {A dynamical theory of X-ray and electron diffraction for a distorted crystal which has been briefly explained elsewhere (Acta cryst. 15 (1962) 1311) is presented in more detail. The fundamental equations for both the X-ray and electron cases are deduced from the Maxwell or the Schrödinger equations, respectively, inside crystalline media which may contain distortions. A method of solution of the equations using the Riemann function is given together with the following general results; (1) the intensities and integrated intensities, with respect to the incident angle, of the transmitted and diffracted rays at a point on the exit surface are given by integrals over the entrance surface, (2) a theoretical basis for the column approximation in the electron case is provided, (3) the intensities of the X-ray projection topographs (traverse pattern) is not dependent upon the type of the incident waves but upon the total intensity to which the crystal is exposed. The limit of the applicability of the present theory to distorted crystals is given compared with the other theories.©1969 The Physical Society of Japan},
-   number = {5},
-   urldate = {2013-10-15},
-   journal = {Journal of the Physical Society of Japan},
-   author = {Takagi, Satio},
    year = {1969},
-   pages = {1239--1253},
-   file = {IPAP - Full Text PDF:/Users/marieingridrichard/Zotero/storage/J75SMHJ2/Takagi - 1969 - A Dynamical Theory of Diffraction for a Distorted .pdf:application/pdf;IPAP - Snapshot:/Users/marieingridrichard/Zotero/storage/7HKMB5EZ/link.html:text/html}
+}
+
+@report{Takagi1962,
+   abstract = {SHORT COMMUNICATIONS ~V,o(r)/~So =-i:rK79i(r)v/n(r) , [ ~Y~n (r)/~sh =-izrKZh(r)y,o(r) + i2:rKflh~,h (r) I (8) which hold also for X-rays, if zh(r) is read as the Fourier coefficient of 4.~ times the polarizability of the crystal with appropriate polarization factor. The boundary conditions at the entrance surface are expressed in similar form as in the ordinary theory, namely V,o(re) = To(re) | y'h(re) 0 ] (9) where re is a position vector on the entrance surface, and T0(re) the amplitude of the incident wave in vacuum. The fact that both sides of (9) are slowly varying functions of position instead of constants is important; incident waves other than plane waves can be treated as well. One of the methods of solution of (8) is to convert ///, l) ko kh I Fig. 1. Schematic drawing showing methods of solution of equation (8). The upper arrows and one of the lower ones are in the direction of the incident wave or of ko, and the other lower one in that of k h. The solutions at P on the exit surface are determined by the part of the incident wave falling between A and B, and can be calculated either by the method of Riemann functions or by successive numerical calculations at each mesh point. it into second-order partial differential equations for Y'0 and Vh, each of which have a hyperbolic form which is capable of solution by the method of Riemann functions. This method gives the solution at a point P inside or on the exit surface of the crystal by a surface integral over AB (Fig. l) where A and B are points on the entrance surface such that AP and BP are, respectively , parallel to k 0 and kh. The integral involves T0(re) and the Riemann function for this particular point P given by the values of Xh, ~ and fla inside the triangle PAB, and its derivatives. This result is of theoretical importance, since it shows that only values of the amplitude of the incident wave falling between A and B contribute to the wave function at P, providing a theoretical basis for the column approximation in the electron case where the triangle PAB reduces to a thin column owing to the small Bragg angle. Equation (8) is also capable of a numerical solution. It includes only the derivatives ~Vo/~S o and ~a/~Sh out of four possible first-order ones. This shows that if we divide the triangle PAB by a fine mesh with axes parallel to k 0 and ka, as shown in Fig. 1, the value of Y'o at P, say, is determined by the values of V0 and v/h at Q, and that of V'n at P, by those of V0 and ~h at R and so on. The repetition of this process from the top surface AB to the bottom will give the solution at P.},
+   author = {Satio Takagi},
+   journal = {Phil. Trans. Roy. Soc. A},
+   pages = {1311-1312},
+   publisher = {Akademische Verlagsgesellschaft. STURKEY, L},
+   title = {Dynamical theory of diffraction applicable to crystals with any kind of small distortion.},
+   volume = {23},
+   year = {1962},
 }
 
 @article{sayre_implications_1952,
@@ -6935,6 +7116,16 @@ DOI = {10.3390/cryst11030312}
    title = {Deploying the Big Data Science Center at the Shanghai Synchrotron Radiation Facility: The first superfacility platform in China},
    volume = {2},
    year = {2021},
+}
+
+@article{Atlan2023,
+   author ={Atlan, Cl\'ement and Corentin Chatelier and Isaac Martens and Maxime Dupraz and Arnaud Viola and Ni Li and Lu Gao and Steven Leake and Tobias Schulli and Jo\"el Eymery and Fr\'ed\'eric Maillard and Marie-Ingrid Richard},
+   title  ={{Imaging the strain evolution of a platinum nanoparticle under electrochemical control}},
+   journal  ={Nature Materials},
+   year  ={2023},
+   volume  ={22},
+   number  ={6},
+   pages  ={754--761},
 }
 
 @article{Simonne2022,
